test/files/neg/macro-invalidsig-ctx-noctx.check
Macros_Test_2.scala:2: error: macro implementation has incompatible shape:
 required: (c: scala.reflect.macros.Context)(x: c.Expr[Any]): c.Expr[Any]
 found   : (c: scala.reflect.macros.Context): Nothing
number of parameter sections differ
  def foo(x: Any) = macro Impls.foo
                                ^
one error found
